--- a/sam-viewer/v-2020-05-23/style-2020-05-23.css
+++ b/sam-viewer/v-2020-05-23/style-2020-05-23.css
@@ -159,7 +159,8 @@ summary {
 	border: 0 solid red;
 	border-radius: 2ch;
 	margin: 1ch;
-	width: 16rem;
+	max-height: 90vh;
+	width: 17rem;
 	overflow: auto;
 	padding: 1ch 1ch 0 1ch;
 	resize: both;
